feat: add German and English localization
